<?xml version="1.0"?>
<package format="2">
  <name>ethernetip_ros</name>
  <version>0.0.0</version>
  <description>The ethernetip_ros package</description>

  <maintainer email="atsuki.yokota@gmail.com">AtsukiYokota</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>odva_ethernetip</depend>

</package>
